// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShareSurveyMenu renders share survey menu 1`] = `
<withI18nextTranslation(PopupMenu)
  actions={
    Array [
      Object {
        "onPress": [Function],
        "text": "Share Survey",
      },
      Object {
        "onPress": [Function],
        "text": "Take Survey",
      },
    ]
  }
/>
`;

exports[`ShareSurveyMenu renders share survey menu in header 1`] = `
<withI18nextTranslation(PopupMenu)
  actions={
    Array [
      Object {
        "onPress": [Function],
        "text": "Share Survey",
      },
      Object {
        "onPress": [Function],
        "text": "Take Survey",
      },
    ]
  }
  iconProps={
    Object {
      "style": Object {
        "color": "#ffffff",
      },
    }
  }
/>
`;
